# Codility

./: .gitignore  .gitmodules  CMakeLists.txt  config.cmake
.github/workflows/: build.yml
app/modules/: CMakeLists.txt  FindGoogleTest.cmake
app/modules/AbsDistinct/: AbsDistinct.cpp  CMakeLists.txt
app/modules/BinaryGap/: BinaryGap.cpp  CMakeLists.txt
app/modules/Brackets/: Brackets.cpp  CMakeLists.txt
app/modules/ChocolatesByNumbers/: CMakeLists.txt  ChocolatesByNumbers.cpp
app/modules/CountDistinctSlices/: CMakeLists.txt  CountDistinctSlices.cpp
app/modules/CountDiv/: CMakeLists.txt  CountDiv.cpp
app/modules/CountFactors/: CMakeLists.txt  CountFactors.cpp
app/modules/CountTriangles/: CMakeLists.txt  CountTriangles.cpp
app/modules/Distinct/: CMakeLists.txt  Distinct.cpp
app/modules/Dominator/: CMakeLists.txt  Dominator.cpp
app/modules/EquiLeader/: CMakeLists.txt  EquiLeader.cpp
app/modules/Fish/: CMakeLists.txt  Fish.cpp
app/modules/Flags/: BasicModuleTest.cpp  CMakeLists.txt  Flags.cpp
app/modules/FloodDepth/: CMakeLists.txt  FloodDepth.cpp
app/modules/FrogJmp/: CMakeLists.txt  FrogJmp.cpp
app/modules/FrogRiverOne/: CMakeLists.txt  FrogRiverOne.cpp
app/modules/GenomicRangeQuery/: CMakeLists.txt  GenomicRangeQuery.cpp
app/modules/LongestPassword/: CMakeLists.txt  LongestPassword.cpp
app/modules/MaxCounters/: CMakeLists.txt  MaxCounters.cpp
app/modules/MaxDoubleSliceSum/: CMakeLists.txt  MaxDoubleSliceSum.cpp
app/modules/MaxNonoverlappingSegments/: CMakeLists.txt  (+1 more)
scripts/: CloneBasicModule.sh  CreateBasicSubmodule.sh
(+39 files in other folders)
